# PelletBoiler

./: .gitignore  CMakeLists.txt  README.md  diagram.json  nvs_part.csv  sdkconfig  sdkconfig.old  wokwi.toml
DynamicConfig/: AbstractListener.hpp  CMakeLists.txt  CallbackListener.hpp  DynamicConfig.hpp  MockListener.hpp
DynamicConfig/Loaders/: ICommitLoader.hpp  IConfigLoader.hpp  MockLoader.hpp  NVSConfigLoader.cpp  NVSConfigLoader.hpp  RAMConfigLoader.hpp  RTCMemConfigLoader.hpp
lvgl_uifiles/: CMakeLists.txt  filelist.txt  ui.c  ui.h
lvgl_uifiles/components/: ui_comp.h  ui_comp_dropdown1.c  ui_comp_dropdown1.h  ui_comp_hook.c  ui_comp_hook.h
lvgl_uifiles/fonts/: ui_font_Ubu.c  ui_font_Ubu14.c  ui_font_Ubu28.c  ui_font_Ubu36.c  ui_font_Ubu52.c  ui_font_Ubu72.c  ui_font_Ubu84.c
lvgl_uifiles/images/: ui_img_1215070265.c  ui_img_1452566487.c  ui_img_1497467533.c
lvgl_uifiles/screens/: ui_Main.c  ui_Manual.c  ui_Settings.c
main/: App.cpp  App.hpp  CMakeLists.txt  UN_App.hpp  idf_component.yml  main.cpp  task_common.hpp  ui_handlers.hpp
main/Actors/: FanManager.hpp  PWMControl.hpp  Relay.hpp  ScrewMotorManager.hpp
main/Display/: IDisplayDriver.hpp  ITouchDriver.hpp  LVGLDisplay.hpp  display_common.hpp  ft5x06TouchDriver.hpp  ili3941Driver.hpp
main/Events/: EspEvent.hpp  EventSession.hpp  Events.hpp
main/Listeners/: AppConfigListener.hpp  FanManagerListener.hpp  ScrewMotorManagerConfigListener.hpp  TempManagerListener.hpp
main/Sensors/: ADC.hpp  AbstractManager.hpp  FireDetectorManager.hpp  LDRSensor.hpp  NTCSensor.hpp  TempSensorManager.hpp
