idf_component_register(SRCS components/ui_comp_dropdown1.c
    components/ui_comp.c
    screens/ui_Main.c
    screens/ui_Manual.c
    screens/ui_Settings.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_1215070265.c
    images/ui_img_1497467533.c
    fonts/ui_font_Ubu.c
    fonts/ui_font_Ubu14.c
    fonts/ui_font_Ubu28.c
    fonts/ui_font_Ubu84.c
    INCLUDE_DIRS "."
    REQUIRES lvgl
    )
